--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "lint": "eslint",
     "seed:books": "node ./seeds/book.seed.js",
+    "seed:authors": "node ./seeds/author.seed.js",
+    "seed:book-relations": "node ./seeds/book-relationseed.seed.js",
+    "seed:all": "npm run seed:authors && npm run seed:books && npm run seed:book-relations",
     "start:watch": "node --watch index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
